Remove pure c compiler requirement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,11 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
 
-PROJECT("Scan Tailor Deviant")
+PROJECT("Scan Tailor Deviant" LANGUAGES CXX)
 
 IF (POLICY CMP0072)
         CMAKE_POLICY(SET CMP0072 NEW)
 ENDIF()
 
-SET(
-        CMAKE_USER_MAKE_RULES_OVERRIDE
-        "${CMAKE_SOURCE_DIR}/cmake/default_cflags.cmake"
-)
 SET(
         CMAKE_USER_MAKE_RULES_OVERRIDE_CXX
         "${CMAKE_SOURCE_DIR}/cmake/default_cxxflags.cmake"
@@ -203,16 +199,6 @@ IF(CANBERRA_FOUND)
         INCLUDE_DIRECTORIES("${CANBERRA_INCLUDE_DIRS}")
         LIST(APPEND EXTRA_LIBS ${CANBERRA_LIBRARIES})
 ENDIF(CANBERRA_FOUND)
-
-
-CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
-IF(NOT HAVE_STDINT_H)
-        CONFIGURE_FILE(compat/pstdint.h "${CMAKE_CURRENT_BINARY_DIR}/stdint.h" COPYONLY)
-        INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
-ELSE(NOT HAVE_STDINT_H)
-        FILE(REMOVE "${CMAKE_CURRENT_BINARY_DIR}/stdint.h")
-ENDIF(NOT HAVE_STDINT_H)
-
 
 IF(WIN32)
    LIST(APPEND EXTRA_LIBS "ws2_32.lib")
