Add 'by distortion type' sorting to deskew stage

--- a/src/core/filters/deskew/CMakeLists.txt
+++ b/src/core/filters/deskew/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(
         ImageView.cpp ImageView.h
         NoDistortionView.cpp NoDistortionView.h
         OptionsWidget.cpp OptionsWidget.h
+        OrderByDistortionTypeProvider.cpp OrderByDistortionTypeProvider.h
         Params.cpp Params.h
         PerspectiveParams.cpp PerspectiveParams.h
         RotationParams.cpp RotationParams.h
