Unify output resolution panel UI with others

--- a/src/core/filters/output/CMakeLists.txt
+++ b/src/core/filters/output/CMakeLists.txt
@@ -9,7 +9,7 @@ ENDIF()
 
 SET(
         sources
-        ChangeDpiWidget.cpp ChangeDpiWidget.h
+        ChangeDpiDialog.cpp ChangeDpiDialog.h
         ImageView.cpp ImageView.h
         ImageViewTab.h
         TabbedImageView.cpp TabbedImageView.h
