Apply selected threshold options only

--- a/src/core/filters/output/CMakeLists.txt
+++ b/src/core/filters/output/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(
         ImageViewTab.h
         TabbedImageView.cpp TabbedImageView.h
         Filter.cpp Filter.h
+        ThresholdsApplyWidget.cpp ThresholdsApplyWidget.h
         OptionsWidget.cpp OptionsWidget.h
         Task.cpp Task.h
         CacheDrivenTask.cpp CacheDrivenTask.h
