Add sort by width

--- a/src/core/filters/deskew/CMakeLists.txt
+++ b/src/core/filters/deskew/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(
         ImageView.cpp ImageView.h
         NoDistortionView.cpp NoDistortionView.h
         OptionsWidget.cpp OptionsWidget.h
+        OrderByDewarpedWidthProvider.cpp OrderByDewarpedWidthProvider.h
         OrderByDistortionTypeProvider.cpp OrderByDistortionTypeProvider.h
         Params.cpp Params.h
         PerspectiveParams.cpp PerspectiveParams.h
