Add ThumbnailMakerBase class

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -51,6 +51,7 @@ SET(
         TabbedDebugImages.cpp TabbedDebugImages.h
         ThumbnailLoadResult.h
         AbstractThumbnailMaker.h
+        ThumbnailMakerBase.cpp ThumbnailMakerBase.h
         ThumbnailPixmapCache.cpp ThumbnailPixmapCache.h
         ThumbnailBase.cpp ThumbnailBase.h
         ThumbnailFactory.cpp ThumbnailFactory.h
